[gd_scene load_steps=25 format=2]

[ext_resource path="res://src/Scripts/GameHandler.gd" type="Script" id=1]
[ext_resource path="res://src/Scenes/Camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Misc/Da Mad Rave.otf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/Audio/reset_level.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/Audio/return_to_main_menu.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/Audio/level_completed.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/Images/grey_sliderLeft.png" type="Texture" id=7]
[ext_resource path="res://assets/Music/song18.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/Images/restart.png" type="Texture" id=9]
[ext_resource path="res://assets/Images/next_level.png" type="Texture" id=10]
[ext_resource path="res://assets/Images/bg.png" type="Texture" id=11]
[ext_resource path="res://assets/Misc/panorama_shader.tres" type="Material" id=12]


[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 512, 512 )
modulate_color = Color( 0.701961, 0.701961, 0.701961, 1 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 512, 512 )
modulate_color = Color( 0.337255, 0.337255, 0.337255, 1 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 512, 512 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 220, 550 )
modulate_color = Color( 0.717647, 0.717647, 0.717647, 1 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 220, 550 )
modulate_color = Color( 0.356863, 0.356863, 0.356863, 1 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 220, 550 )

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 39, 31 )
modulate_color = Color( 0.737255, 0.737255, 0.737255, 1 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 39, 31 )
modulate_color = Color( 0.376471, 0.376471, 0.376471, 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 39, 31 )

[sub_resource type="DynamicFont" id=4]
size = 64
extra_spacing_char = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 32
extra_spacing_char = 10
font_data = ExtResource( 3 )

[sub_resource type="Environment" id=14]
background_mode = 4
background_color = Color( 0.431373, 0.431373, 0.431373, 1 )
ambient_light_color = Color( 0.933333, 0.933333, 0.933333, 1 )
tonemap_mode = 3
tonemap_exposure = 1.16

[node name="Main" type="Spatial"]
script = ExtResource( 1 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 1280, 0 )
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -151.33
margin_top = 526.814
margin_right = -37.3303
margin_bottom = -83.1863
focus_mode = 0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevel" type="Button" parent="UI"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -140.0
margin_top = 250.0
margin_right = -51.0
margin_bottom = -236.0
focus_mode = 0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return" type="Button" parent="UI"]
anchor_bottom = 1.0
margin_left = 28.0
margin_top = 25.0
margin_right = 133.0
margin_bottom = -617.0
focus_mode = 0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelID" type="Label" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -205.272
margin_top = 4.10834
margin_right = 1.72803
margin_bottom = -540.892
custom_fonts/font = SubResource( 4 )
text = "00"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StepsTaken" type="Label" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -205.0
margin_top = 160.108
margin_right = -29.0
margin_bottom = -384.892
custom_fonts/font = SubResource( 5 )
text = "00"
align = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera" parent="." instance=ExtResource( 2 )]
current = true

[node name="Tween" type="Tween" parent="."]

[node name="GameMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -5.0
autoplay = true
bus = "Music"

[node name="ResetLevelSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="ReturnSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="LevelCompletedSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 14 )

[node name="BGLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="BG" type="TextureRect" parent="BGLayer"]
modulate = Color( 0.431373, 0.431373, 0.431373, 1 )
material = ExtResource( 12 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="UI/RestartButton" to="." method="restart_level"]
[connection signal="pressed" from="UI/NextLevel" to="." method="go_to_next_level" flags=3]
[connection signal="pressed" from="UI/Return" to="." method="return_to_main_menu"]
